[gd_scene load_steps=32 format=3 uid="uid://e2t0ulvl0opr"]

[ext_resource type="Script" uid="uid://dv3ysab0be52y" path="res://scripts/game_manager.gd" id="1_l756w"]
[ext_resource type="PackedScene" uid="uid://cilxou77msewv" path="res://Scenes/teleport_powerup.tscn" id="2_58qbg"]
[ext_resource type="Texture2D" uid="uid://clugvkttegwni" path="res://assets/player_1/Idle (32 x 32)/sprite_0.png" id="2_r0mdn"]
[ext_resource type="Texture2D" uid="uid://udrwf3y70xwi" path="res://assets/Colorful Number Sense Snakes and Ladders Worksheet.png" id="2_vvhy6"]
[ext_resource type="Texture2D" uid="uid://dcy6c07un24n8" path="res://assets/player_1/Idle (32 x 32)/sprite_1.png" id="3_0xqxu"]
[ext_resource type="Script" uid="uid://c1lurfpy37dw3" path="res://scripts/player.gd" id="4_58qbg"]
[ext_resource type="Texture2D" uid="uid://boqicbb5pfgkq" path="res://assets/player_1/Idle (32 x 32)/sprite_2.png" id="4_tpqse"]
[ext_resource type="Texture2D" uid="uid://ddialfyqqaljo" path="res://assets/player_1/Idle (32 x 32)/sprite_3.png" id="5_c78sm"]
[ext_resource type="Texture2D" uid="uid://b6umoshmsugyd" path="res://assets/player_1/Idle (32 x 32)/sprite_4.png" id="6_i47ox"]
[ext_resource type="Texture2D" uid="uid://bym4di0vcsefb" path="res://assets/player_1/Idle (32 x 32)/sprite_5.png" id="7_sftma"]
[ext_resource type="Texture2D" uid="uid://dhjp21wpblunj" path="res://assets/player_1/Idle (32 x 32)/sprite_6.png" id="8_erobn"]
[ext_resource type="Texture2D" uid="uid://brxasayx5rgji" path="res://assets/player_1/Idle (32 x 32)/sprite_7.png" id="9_vc13p"]
[ext_resource type="Texture2D" uid="uid://rphh6x51p080" path="res://assets/player_1/Idle (32 x 32)/sprite_8.png" id="10_gpk8t"]
[ext_resource type="Texture2D" uid="uid://duxxt6ohlauag" path="res://assets/player_2/Diego_Idle (32 x 48)/Diego_idle0.png" id="11_ry2jr"]
[ext_resource type="Texture2D" uid="uid://c2ghanxgu6nbt" path="res://assets/player_2/Diego_Idle (32 x 48)/Diego_idle1.png" id="12_qnvbm"]
[ext_resource type="Texture2D" uid="uid://1f8pw3q4owxr" path="res://assets/player_2/Diego_Idle (32 x 48)/Diego_idle2.png" id="13_vvhy6"]
[ext_resource type="Texture2D" uid="uid://dmd5x2npx3peo" path="res://assets/player_2/Diego_Idle (32 x 48)/Diego_idle3.png" id="14_ns551"]
[ext_resource type="Texture2D" uid="uid://bgc2rbqgvgv7f" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run0.png" id="15_0bxlt"]
[ext_resource type="Texture2D" uid="uid://bnexmrtxllhi" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run1.png" id="16_58qbg"]
[ext_resource type="Texture2D" uid="uid://busl5d6woh6jj" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run2.png" id="17_gnsnf"]
[ext_resource type="Texture2D" uid="uid://bo6321cm5dgil" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run3.png" id="18_06qyo"]
[ext_resource type="Texture2D" uid="uid://3cad6sp6o7pr" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run4.png" id="19_3bgrf"]
[ext_resource type="Texture2D" uid="uid://bnufgbr2t71bs" path="res://assets/player_2/Diego_Running (32 x 48)/Diego_run5.png" id="20_vt8ts"]
[ext_resource type="Texture2D" uid="uid://il3vqcpeausx" path="res://assets/start/Start2.png" id="21_qnvbm"]
[ext_resource type="Texture2D" uid="uid://bd3rcxny7iv1a" path="res://assets/start/Start5.png" id="23_0bxlt"]
[ext_resource type="PackedScene" uid="uid://2b1ge8obgerq" path="res://Scenes/double_dice.tscn" id="23_ns551"]
[ext_resource type="Script" uid="uid://cxaq51u72l044" path="res://scripts/dice_visual_container.gd" id="27_06qyo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vvhy6"]
radius = 15.0
height = 48.0

[sub_resource type="SpriteFrames" id="SpriteFrames_hm1wn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r0mdn")
}, {
"duration": 1.0,
"texture": ExtResource("3_0xqxu")
}, {
"duration": 1.0,
"texture": ExtResource("4_tpqse")
}, {
"duration": 1.0,
"texture": ExtResource("5_c78sm")
}, {
"duration": 1.0,
"texture": ExtResource("6_i47ox")
}, {
"duration": 1.0,
"texture": ExtResource("7_sftma")
}, {
"duration": 1.0,
"texture": ExtResource("8_erobn")
}, {
"duration": 1.0,
"texture": ExtResource("9_vc13p")
}, {
"duration": 1.0,
"texture": ExtResource("10_gpk8t")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_r0mdn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ry2jr")
}, {
"duration": 1.0,
"texture": ExtResource("12_qnvbm")
}, {
"duration": 1.0,
"texture": ExtResource("13_vvhy6")
}, {
"duration": 1.0,
"texture": ExtResource("14_ns551")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_0bxlt")
}, {
"duration": 1.0,
"texture": ExtResource("16_58qbg")
}, {
"duration": 1.0,
"texture": ExtResource("17_gnsnf")
}, {
"duration": 1.0,
"texture": ExtResource("18_06qyo")
}, {
"duration": 1.0,
"texture": ExtResource("19_3bgrf")
}, {
"duration": 1.0,
"texture": ExtResource("20_vt8ts")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ns551"]
height = 40.0

[node name="Main_game" type="Node"]

[node name="Game_manager" type="Node" parent="." node_paths=PackedStringArray("player_nodes")]
script = ExtResource("1_l756w")
player_nodes = [NodePath("../Players/Player_1"), NodePath("../Players/Player_2")]
power_up_scenes = Array[PackedScene]([ExtResource("23_ns551"), ExtResource("2_58qbg")])

[node name="Board" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Board"]
z_index = -6
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_vvhy6")
centered = false

[node name="Players" type="Node" parent="."]

[node name="Player_1" type="CharacterBody2D" parent="Players" groups=["players"]]
position = Vector2(231, 505)
script = ExtResource("4_58qbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player_1"]
position = Vector2(-0.999996, 0.999992)
scale = Vector2(-1.41861, -1.41861)
shape = SubResource("CapsuleShape2D_vvhy6")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Players/Player_1"]
z_index = 1
position = Vector2(-1.00001, 1)
scale = Vector2(1.73437, 1.73437)
sprite_frames = SubResource("SpriteFrames_hm1wn")
animation = &"idle"

[node name="Player_2" type="CharacterBody2D" parent="Players" groups=["players"]]
position = Vector2(229, 479)
script = ExtResource("4_58qbg")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Players/Player_2"]
position = Vector2(5, -4)
scale = Vector2(1.28125, 1.28125)
sprite_frames = SubResource("SpriteFrames_r0mdn")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player_2"]
position = Vector2(2.38419e-07, -3.8147e-06)
scale = Vector2(1.6, 1.6)
shape = SubResource("CapsuleShape2D_ns551")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Roll_dice_button" type="TextureButton" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -83.0
offset_right = 262.0
offset_bottom = -18.0
grow_vertical = 0
texture_normal = ExtResource("21_qnvbm")
texture_pressed = ExtResource("23_0bxlt")
stretch_mode = 0

[node name="Turn_info_label" type="Label" parent="UI"]
offset_left = 23.0
offset_top = 23.0
offset_right = 236.0
offset_bottom = 74.0

[node name="dice_visual_container" type="Node2D" parent="UI"]
position = Vector2(150, 507)
scale = Vector2(2, 2)
script = ExtResource("27_06qyo")
